[gd_scene load_steps=17 format=3 uid="uid://uofcxxiaue0i"]

[ext_resource type="Script" path="res://script/ui/battle_scene.gd" id="1_0hekd"]
[ext_resource type="Texture2D" uid="uid://bdwgsps7msohv" path="res://assets/Background.png" id="1_igw74"]
[ext_resource type="PackedScene" uid="uid://2s8n7v3j7nf4" path="res://scenes/battle_hud.tscn" id="2_oyr6g"]
[ext_resource type="Script" path="res://script/ui/actor_ui_manager.gd" id="4_xp43c"]
[ext_resource type="PackedScene" uid="uid://prnhw6kneqmu" path="res://scenes/card.tscn" id="5_34irb"]
[ext_resource type="Texture2D" uid="uid://dchwacvnpfc5s" path="res://assets/target.png" id="5_aboep"]
[ext_resource type="Texture2D" uid="uid://dnvyvm5vfpg31" path="res://assets/small_target.png" id="6_kk4xk"]
[ext_resource type="Script" path="res://script/ui/hand_ui.gd" id="6_sqh8v"]
[ext_resource type="Texture2D" uid="uid://b8lpwtlhv4prr" path="res://assets/buff_target.png" id="7_iysv6"]
[ext_resource type="Script" path="res://script/battle/battle_scene_camera.gd" id="13_yyjm8"]
[ext_resource type="Script" path="res://script/ui/particle_effect_manager.gd" id="14_eymi4"]
[ext_resource type="Script" path="res://script/ui/end_turn_button.gd" id="14_vdmwm"]
[ext_resource type="Texture2D" uid="uid://pmtbvaw8jtdm" path="res://assets/end_turn.png" id="15_11nws"]
[ext_resource type="PackedScene" uid="uid://fp4dd2rv1vu5" path="res://scenes/particles/slash_hit_effect.tscn" id="15_k8xp2"]
[ext_resource type="PackedScene" uid="uid://g7rftko87npn" path="res://scenes/particles/magic_slash_hit_particle.tscn" id="16_hqydk"]
[ext_resource type="FontFile" uid="uid://cgih62i6o6aul" path="res://data/PixelPurl.ttf" id="16_ypwo7"]

[node name="battle_scene" type="Node2D"]
texture_filter = 1
script = ExtResource("1_0hekd")
_battle_hud_path = NodePath("HUD/battle_hud")
_actor_ui_path = NodePath("actor_ui/actor_ui")
_hand_ui_path = NodePath("hand_ui/hand")
_end_turn_button_path = NodePath("end_turn_button")
_scene_camera_path = NodePath("Camera2D")
_particle_effect_helper_path = NodePath("particle_effect")

[node name="background" type="Sprite2D" parent="."]
scale = Vector2(64, 36)
texture = ExtResource("1_igw74")

[node name="HUD" type="Node2D" parent="."]
position = Vector2(-320, -180)

[node name="battle_hud" parent="HUD" instance=ExtResource("2_oyr6g")]

[node name="actor_ui" type="Node2D" parent="."]

[node name="actor_ui" type="Control" parent="actor_ui"]
layout_mode = 3
anchors_preset = 0
offset_left = -193.0
offset_top = -100.0
offset_right = 195.0
offset_bottom = 78.0
script = ExtResource("4_xp43c")
_enemy_ui_container_path = NodePath("enemy_ui_container")
_ally_ui_container_path = NodePath("ally_ui_container")
target_texture = ExtResource("5_aboep")
blast_target_texture = ExtResource("6_kk4xk")
buff_target_texture = ExtResource("7_iysv6")

[node name="enemy_ui_container" type="Control" parent="actor_ui/actor_ui"]
anchors_preset = 0
offset_left = 193.0
offset_top = 2.0
offset_right = 385.0
offset_bottom = 156.0
mouse_filter = 2

[node name="ally_ui_container" type="Control" parent="actor_ui/actor_ui"]
anchors_preset = 0
offset_left = 1.0
offset_top = 2.0
offset_right = 193.0
offset_bottom = 156.0

[node name="hand_ui" type="Node2D" parent="."]

[node name="hand" type="Control" parent="hand_ui"]
layout_mode = 3
anchors_preset = 0
offset_left = -193.0
offset_top = 84.0
offset_right = 193.0
offset_bottom = 180.0
script = ExtResource("6_sqh8v")
card_ui_scene = ExtResource("5_34irb")
_card_ui_container_path = NodePath("card_ui_container")
_card_starting_position_path = NodePath("card_starting_position")
spacing = 50

[node name="card_ui_container" type="Control" parent="hand_ui/hand"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="card_starting_position" type="Control" parent="hand_ui/hand"]
anchors_preset = 0
offset_left = 160.0
offset_top = -2.0
offset_right = 160.0
offset_bottom = -2.0
mouse_filter = 1

[node name="end_turn_button" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 129.0
offset_top = 142.0
offset_right = 193.0
offset_bottom = 174.0
script = ExtResource("14_vdmwm")

[node name="texture" type="TextureRect" parent="end_turn_button"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("15_11nws")

[node name="Label" type="Label" parent="end_turn_button/texture"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("16_ypwo7")
text = "End Turn"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = -380
limit_top = -380
limit_right = 380
limit_bottom = 380
script = ExtResource("13_yyjm8")

[node name="particle_effect" type="Node2D" parent="."]
script = ExtResource("14_eymi4")
slash_effect = ExtResource("15_k8xp2")
magic_slash_effect = ExtResource("16_hqydk")
